@@ -295,13 +295,14 @@ libglib_2_0_la_LDFLAGS = \
 
 INSTALL_PROGS=
 
+gspawn-win32-helper-console.c:
+	echo '#include "gspawn-win32-helper.c"' >$@
+
 if OS_WIN32
 INSTALL_PROGS += gspawn-win32-helper gspawn-win32-helper-console
 gspawn_win32_helper_LDADD = libglib-2.0.la
 gspawn_win32_helper_LDFLAGS = -mwindows
 gspawn_win32_helper_console_LDADD = libglib-2.0.la
-gspawn-win32-helper-console.c:
-	echo '#include "gspawn-win32-helper.c"' >$@
 
 glib-win32-res.o: glib.rc
 	$(WINDRES) glib.rc $@
